--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "license": "MIT",
     "scripts": {
         "start": "node src/server.ts",
-        "build": "tsc",
+        "build": "babel src --extensions \".ts\" --out-dir dist --copy-files",
         "dev:server": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules src/server.ts"
     },
     "dependencies": {
@@ -14,9 +14,15 @@
         "uuid": "^8.3.0"
     },
     "devDependencies": {
+        "@babel/cli": "^7.10.5",
+        "@babel/core": "^7.11.1",
+        "@babel/node": "^7.10.5",
+        "@babel/preset-env": "^7.11.0",
+        "@babel/preset-typescript": "^7.10.4",
         "@types/express": "^4.17.7",
         "@typescript-eslint/eslint-plugin": "^3.7.1",
         "@typescript-eslint/parser": "^3.7.1",
+        "babel-plugin-module-resolver": "^4.0.0",
         "eslint": "6.8.0",
         "eslint-config-airbnb-base": "^14.2.0",
         "eslint-config-prettier": "^6.11.0",
