--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "main": "index.js",
     "license": "MIT",
     "scripts": {
-        "start": "node src/ser.ts",
+        "start": "node src/server.ts",
         "build": "tsc",
         "dev:server": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules src/server.ts"
     },
