--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     },
     "dependencies": {
         "@types/uuid": "^8.3.0",
+        "babel-cli": "^6.26.0",
         "express": "^4.17.1",
         "uuid": "^8.3.0"
     },
