--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
         "start-ts": "node src/server.ts",
         "build-ts": "tsc",
         "build": "babel src --extensions \".ts\" --out-dir dist --copy-files",
-        "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules src/server.ts"
+        "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules src/server.ts",
+        "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
     },
     "dependencies": {
         "@types/uuid": "^8.3.0",
         "express": "^4.17.1",
+        "pg": "^8.4.1",
+        "reflect-metadata": "^0.1.13",
+        "typeorm": "^0.2.28",
         "uuid": "^8.3.0"
     },
     "devDependencies": {
